*******************************
******** RELEASE NOTES ********
*******************************

**************************
**** 0.1.2 - 04/05-20 ****
**************************

******************
**** Features ****
******************

 * Added DrawOrder property to IDrawable

******************
***** Fixes ******
******************

 * Removed interface IHasLogic added CreateLogic function to Entity2d and Scene instead.
 * Removed class LogicMulti

******************
** Improvements **
******************



**************************
**** 0.1.1 - 27/04-20 ****
**************************

******************
**** Features ****
******************

 * Added DrawableFont with new line support
 * Added Mouse Input Service and Hardware for TypeODesktop and TypeOSDL
 * Added SDL flags to SDLModuleOption in TypeOSDL
 * Added the ability to create a Anchor on a Entity2d object

******************
***** Fixes ******
******************

 * Changed Color, Plane, Ray, Rectangle, Vec2 and Vec3 back to being Structs, oops
 * Changed interface name IIsDrawable to IDrawable
 * Removed interface IHasDrawable added CreateDrawable function to Entity2d and Scene instead.
 * Removed class DrawableMulti

******************
** Improvements **
******************

 * Dependency injections can not be set to private properties as well as public

**************************
**** 0.1.0 - 13/03-20 ****
**************************

******************
**** Features ****
******************

 * Added support for .net core 3.1
 * Created TypeOCore
 * Created Module TypeODesktop
 * Created Module TypeOSDL
 * Created 'Game' base class for containing your Game code
 * Created 'Entity' base class that should contain all the agents and objects
 * Created 'Scene' base class holding a collection of entities
 * Created 'Logic' base class that contain modular pieces of logic
 * Created 'EntityData' base class for defining entity data structures
 * Created 'Drawable' base class for handling drawings to screen