@@ -17,13 +17,17 @@ namespace TypeOEngine.Typedeaf.Core
         public Window Window { get; set; }
         public Canvas Canvas { get; set; }
         public ContentLoader ContentLoader { get; set; }
-        public EntityList Entities { get; set; }
+        public EntityList Entities { get; set; } //TODO: Look over this
+        public DrawStack DrawStack { get; private set; } //TODO: Should be able to create draw stack from Game maybe?
 
         public bool IsInitialized { get; set; } = false;
         public bool Pause         { get; set; } = false;
         public bool Hide          { get; set; } = false;
 
-        protected Scene() { }
+        protected Scene()
+        {
+            DrawStack = new DrawStack();
+        }
 
         public abstract void Initialize();
         public abstract void Update(double dt);
